fixed the overflow of end of page img

--- a/CharacterPage-Michaels/style.css
+++ b/CharacterPage-Michaels/style.css
@@ -121,7 +121,7 @@ nav {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     box-shadow: 0px -100px 50px #221E1A inset;
@@ -526,10 +526,10 @@ footer{
         font-size: 3.5vw;
         width: 85%;
         padding: 25px;
-    };
+    }
 
     .end-of-page img{
-        width: 70%;
+        width: 20vw;
     }
 
     .top-text{
