--- a/DragonClassPage-Michaels/style.css
+++ b/DragonClassPage-Michaels/style.css
@@ -573,7 +573,8 @@ footer{
     }
 
     .end-of-page img{
-        width: 70%;
+        /* width: 70%; */
+        width: 20vw;
     }
 
     .top-text{
