--- a/HomePage-Michaels/style.css
+++ b/HomePage-Michaels/style.css
@@ -642,7 +642,7 @@ footer {
     }
 
     .end-of-page img {
-        width: 70%;
+        width: 20vw;
     }
 
     .top-text {
