--- a/IsleofBerkPage-Michaels/style.css
+++ b/IsleofBerkPage-Michaels/style.css
@@ -469,7 +469,7 @@ footer{
     }
 
     .end-of-page img{
-        width: 70%;
+        width: 20vw;
     }
 
     .top-text{
